--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,45 @@
 /* Add styling for your page here */
 
 .App {
+    background-color: black;
+    color: white;
 
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+#Bakery{
+    font-family:'Times New Roman', Times, serif
 }
 
 .BakeryItem {
-  
+    color: white;
+    background-color: #4a4a4a;
+    margin: 10px;
+    padding: 50px;
+}
+
+.bakeryItemDescription{
+    display: flex;
+    flex-direction: column;
+    font-family:'Times New Roman', Times, serif;
+
+    p{
+        margin: 1px;
+    }
+    button {
+        font-family:'Times New Roman', Times, serif;
+        background-color: #1a1a1a;
+        color: white; 
+        padding: 3px;
+    }
+    button:hover {
+        border-color: lightgrey;
+    }
+}
+
+.imageSpecifications{
+    width: 300px;
+    height: auto;
 }
